--- a/app/views/cadastro/cadastro_aeroporto.ejs
+++ b/app/views/cadastro/cadastro_aeroporto.ejs
@@ -4,52 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Aeroporto - Cadastro</title>
 </head>
 <body>
-    <h1>Cadastro Aeroporto</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h1 class="h1"> SDA </h1></a>        
+    </nav>
+
+    <div style="width: 50%;" class="container">
+        <h1>Cadastro Aeroporto</h1>
 
 
-    <form action="/aeroportos/cadastrar" method="post">
-
-        <label for="cod_aeroporto">Código do Aeroporto</label>
-
-                <input type="text" name="cod_aeroporto" id="cod_aeroporto" maxlength="3">
-        </br></br>
-
-        <label for="nome_cidade">Nome da cidade</label>
-
-                <input type="text" name="nome_cidade" id="nome_cidade">
-        </br></br>
-
-        <label for="sigla_uf">Sigla UF</label>
-            
-            <select name="sigla_uf" id="sigla_uf">
-                <option value="">Nenhum</option>
-                <% for(var i=0;i< ufs.length;i++){ %>
-                    <option value="<%= ufs[i].SG_UF %>"><%= ufs[i].SG_UF %></option>
-                <% } %>
-
-            </select>
-            
-
+        <form action="/aeroportos/cadastrar" method="post">
+            <div class="form-group">
+                <label for="cod_aeroporto">Código do Aeroporto</label>
+    
+                <input type="text" name="cod_aeroporto" id="cod_aeroporto" maxlength="3" class="form-control form-control-md">
+            </div>
+            <div class="form-group">
+                <label for="nome_cidade">Nome da cidade</label>
+    
+                <input type="text" name="nome_cidade" id="nome_cidade" class="form-control form-control-md">
+            </div>
+            <div class="form-group">
+                <label for="sigla_uf">Sigla UF</label>
                 
-        </br></br>
+                <select name="sigla_uf" id="sigla_uf" class="form-control form-control-md">
+                    <option value="">Nenhum</option>
+                    <% for(var i=0;i< ufs.length;i++){ %>
+                        <option value="<%= ufs[i].SG_UF %>"><%= ufs[i].SG_UF %></option>
+                    <% } %>
+    
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="cod_pais">Cod. País</label>
+    
+                <select name="cod_pais" id="cod_pais" class="form-control form-control-md">
+                    <% for(var i=0;i< paises.length;i++){ %>
+                        <option value="<%= paises[i].CD_PAIS %>"><%= paises[i].CD_PAIS %></option>
+                    <% } %>
+    
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="submit" id="enviar" class="btn btn-success" disabled>
+            </div>
+           
+            
+        </form>
+    </div>
 
-        <label for="cod_pais">Cod. País</label>
-
-            <select name="cod_pais" id="cod_pais">
-                <% for(var i=0;i< paises.length;i++){ %>
-                    <option value="<%= paises[i].CD_PAIS %>"><%= paises[i].CD_PAIS %></option>
-                <% } %>
-
-            </select>
-        </br></br>
-
-
-        <input type="submit" id="enviar" disabled>
-        
-    </form>
+    
 </body>
 <script>
 
