--- a/app/views/editar/editar_pais.ejs
+++ b/app/views/editar/editar_pais.ejs
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>País - Editar</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>        
+    </nav>
+
     <h1>Atualizar País</h1>
 
+    <div class="container">
+        <form action="atualizar/<%= paises[0].CD_PAIS %>" method="post">
 
-    <form action="atualizar/<%= paises[0].CD_PAIS %>" method="post">
+            <div class="form-group">
+                <label for="nome_pais">Nome</label>
+    
+                <input type="text" name="nome_pais" id="nome_pais" class="form-control form-control-md">
+            </div>
+            <div class="form-group">
+                <label for="quant_pop">Quant. Populacional</label>
+    
+                <input type="number" name="quant_pop" id="quant_pop" class="form-control form-control-md">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-success">
+                <button id="deletar" class="btn btn-danger">Deletar</button>
+            </div>
+        </form>
+    </div>
 
-        <label for="nome_pais">Nome</label>
-
-                <input type="text" name="nome_pais" id="nome_pais">
-        </br></br>
-
-        <label for="quant_pop">Quant. Populacional</label>
-
-                <input type="number" name="quant_pop" id="quant_pop">
-        </br></br>
-
-
-        <input type="submit" >
-        <button id="deletar">Deletar</button>
-    </form>
+    
 </body>
 <script>
 
