--- a/app/views/editar/editar_uf.ejs
+++ b/app/views/editar/editar_uf.ejs
@@ -3,22 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>UF - Editar</title>
 </head>
 <body>
-    <h1>Atualizar Unidade Federal</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>        
+    </nav>
 
-    <form action="atualizar/<%= uf[0].SG_UF %>" method="post">
-        
-    <label>Nome</label>
-	<input type="text" id="nome" name="nome" />
-    </br></br>
+    <div class="container">
+        <h1>Atualizar Unidade Federal</h1>
 
+        <form action="atualizar/<%= uf[0].SG_UF %>" method="post">
+            
+            <div class="form-group">
+                <label>Nome</label>
+                <input type="text" id="nome" name="nome" class="form-control form-control-md" />
+                </br></br>
+            </div>
 
-    <input type="submit" >
-    <button id="deletar">Deletar</button>
-    </form>
+            <div class="form-group">
+                <input type="submit" class="btn btn-success" >
+                <button id="deletar" class="btn btn-danger">Deletar</button>
+            </div>
+
+        </form>
+    </div>
+
+    
 </body>
 <script>
 
