--- a/app/views/cadastro/cadastro_equipamento.ejs
+++ b/app/views/cadastro/cadastro_equipamento.ejs
@@ -3,64 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Equipamento - Cadastro</title>
 </head>
 <body>
-    <h1>Cadastro Equipamento</h1>
 
-
-    <form action="/equipamentos/cadastrar" method="post">
-
-    <label>Código Equipamento</label>
-    <input type="text" id="cod_equip" name="cod_equip" value=""/>
-    </br></br>
-
-    <label>Nome</label>
-		<input type="text" id="nome" name="nome" value=""/>
-    </br></br>
-
-    <label for="tipo_equip">Tipo de equipamento</label>
-
-            <select name="tipo_equip" id="tipo_equip">
-            <option value="JATO">JATO</option>
-            <option value="HELICOPTERO">HELICOPTERO</option>
-            <option value="TURBO HELICE">TURBO HELICE</option>
-
-           
-
-            </select>
-    </br></br>
-
-    <label for="tipo_propulsor">Tipo de propulsor</label>
-
-            <select name="tipo_propulsor" id="tipo_propulsor">
-            <option value="R">R</option>
-            <option value="M">M</option>
-           
-
-            </select>
-    </br></br>
-
-   <label>Quantidade de motores</label>
-   <select name="quant_motor" id="quant_motor">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-   
-
-    </select>
-    </br></br>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
+        <img src="/img/logo.png" />           
+    </nav>
     
-    <label>Quantidade passageiros</label>
-		<input type="number" id="quant_passageiro" name="quant_passageiro" />
-    </br></br>
-       
 
-    <input type="submit" >
+    <div class="container">
+      <h1>Cadastro Equipamento</h1>
+      <form action="/equipamentos/cadastrar" method="post">
+
+      <div class="form-group">
+        <label>Código Equipamento</label>
+        <input type="text" id="cod_equip" name="cod_equip" class="form-control form-control-md" value=""/>
+      </div>
+
+      <div class="form-group">
+        <label>Nome</label>
+        <input type="text" id="nome" name="nome" class="form-control form-control-md" value=""/>
+      </div>
+
+      <div class="form-group">
+            <label for="tipo_equip">Tipo de equipamento</label>
+            <select name="tipo_equip" id="tipo_equip" class="form-control form-control-md">
+              <option value="JATO">JATO</option>
+              <option value="HELICOPTERO">HELICOPTERO</option>
+              <option value="TURBO HELICE">TURBO HELICE</option>
+            </select>
+      </div>
+
+      <div class="form-group">
+        <label for="tipo_propulsor">Tipo de propulsor</label>
+
+        <select name="tipo_propulsor" id="tipo_propulsor" class="form-control form-control-md">
+          <option value="R">R</option>
+          <option value="M">M</option>
+           
+
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Quantidade de motores</label>
+        <select name="quant_motor" id="quant_motor" class="form-control form-control-md">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Quantidade passageiros</label>
+		    <input type="number" id="quant_passageiro" name="quant_passageiro" class="form-control form-control-md" />
+      </div>
+
+      <div class="form-group">
+        <input type="submit" class="btn btn-success" >
+      </div>
+    </div>
+    
     </form>
 </body>
 </html>
